<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="filter"
            type="com.elericuz.metrodelima.ui.FilterFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/filtro_de_transacciones"
                android:textColor="@color/white"
                android:textSize="@dimen/title_01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/filterButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/action_button"
                android:contentDescription="@string/regresa_al_listado_de_transacciones"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:onClick="@{() -> filter.backClick()}"
                android:stateListAnimator="@animator/button_raise"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back_ios_new_48px" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/tarifa"
                    android:textSize="@dimen/subtitle_03"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/fareSpinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/lista_de_tarifas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/estacion"
                    android:textSize="@dimen/subtitle_03"
                    app:layout_constraintStart_toStartOf="@+id/fareSpinner"
                    app:layout_constraintTop_toBottomOf="@+id/fareSpinner" />

                <Spinner
                    android:id="@+id/stationSpinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/lista_de_tarifas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/transacci_n"
                    android:textSize="@dimen/subtitle_03"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/stationSpinner" />

                <Spinner
                    android:id="@+id/transactionSpinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/lista_de_tarifas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:onClick="@{() -> filter.dateClick()}"
                    android:text="@string/fecha"
                    android:textSize="@dimen/subtitle_03"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/transactionSpinner" />

                <TextView
                    android:id="@+id/selectedDate"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="@{() -> filter.dateClick()}"
                    android:paddingVertical="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:text="06-06-2022" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/goFilterButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/filtrar"
                android:textSize="@dimen/subtitle_01"
                android:onClick="@{() -> filter.filterClick()}"
                app:layout_constraintEnd_toEndOf="@+id/filters"
                app:layout_constraintStart_toStartOf="@+id/filters"
                app:layout_constraintTop_toBottomOf="@+id/filters" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>